--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ pre {
 
 /* Banner styles */
 #banner {
-  background: radial-gradient(circle, #d1535e 0%, #eaac66 50%, #1e3a8a 100%);
+  background: radial-gradient(circle, #356892 0%, #eaac66 50%, #1e3a8a 100%);
   color: rgb(255, 255, 255);
   padding: 12px 20px;
 }
